# ai-agent-mcp-server

./: .coverage  .env.example  .gitignore  AWS_DEPLOYMENT.md  QUICKSTART.md  README.md  RELEASE_CHECKLIST.md  SECURITY_CHECKLIST.md  architecture.txt  docker-compose.yml  pyproject.toml  requirements.txt  start.bat  start.sh
.ebextensions/: python.config
.github/workflows/: ci.yml
app/: config.py  main.py  web.py
app/agent/: agent.py  llm.py  llm_base.py  llm_fake.py  llm_openai.py  memory.py  planner.py
app/api/: agent.py  routes.py  study.py
app/domain/: study_material.py
app/export/: pdf_exporter.py
app/models/: agent.py
app/rag/: embedder.py  knowledge_base.py  vector_store.py
app/storage/: __init__.py  mongodb_store.py
app/tools/: answer_tool.py  base.py  file_tool.py  math_tool.py  question_tool.py  summary_tool.py
scripts/: validate_branch_name.sh
static/: index.html
tests/: conftest.py
tests/agent/: test_agent.py  test_planner.py
tests/api/: test_api.py
tests/export/: test_pdf_exporter.py
tests/rag/: test_vector_store.py
tests/tools/: test_answer_tool.py  test_question_tool.py  test_summary_tool.py  test_tools.py
